# jetson-SX126X

./: README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
examples/: test-receiving.py  test.py
examples/Ping Pong/device 1/: main.py
examples/Ping Pong/device 2/: main.py
examples/RX/: main.py
examples/RX (non blocking)/: main.py
examples/TX/: main.py
examples/TX (non blocking)/: main.py
lib/: _sx126x.py  sx1261.py  sx1262.py  sx1268.py  sx126x.py  test.py
src/jetson-SX126X/: sx1261.py  sx1262.py  sx1268.py  sx126x.py
src/jetson_sx126x/: _sx126x.py  sx126x.py
