[metadata]
name = jetson-SX126X
version = 0.0.1
author = McMaster Mars Rover
author_email = marsatmac@gmail.com
description = Semtech SX126X LoRa driver for Jetson TX2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MacRover/jetson-SX126X
project_urls =
    Bug Tracker = https://github.com/MacRover/jetson-SX126X/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Jetson.GPIO>=2.0.18
    python-periphery>=2.3.0

[options.packages.find]
where = src